--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "knplabs/knp-paginator-bundle": "5.9.0",
+        "knplabs/knp-paginator-bundle": "^5.0 || ^6.0",
         "symfony/form": "^5.0 || ^6.0",
         "symfony/framework-bundle": "^5.0 || ^6.0",
         "symfony/twig-bundle": "^5.0 || ^6.0",
